--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Muhammad Umair | Portfolio">
   <meta itemprop="description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/Images/readme-img.png">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://muhammadumair.dev">
@@ -23,14 +22,14 @@
   <meta property="og:title" content="Muhammad Umair | Portfolio">
   <meta property="og:description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/Images/readme-img.png">
+    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Muhammad Umair | Portfolio">
   <meta name="twitter:description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/Images/readme-img.png">
+    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
 </head>
 
 <body>
