--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,89 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+
+  <!-- Primary Meta Tags -->
+  <title>Muhammad Umair | Full Stack Engineer & React Native Developer</title>
+  <meta name="title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta name="description"
+    content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
+  <meta name="keywords"
+    content="Full Stack Engineer, React Native Developer, Web Developer, Mobile Developer, JavaScript, React, Node.js, Portfolio, Software Engineer, Frontend Developer, Backend Developer">
+  <meta name="author" content="Muhammad Umair">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://muhammadumair.dev">
+
+  <!-- Manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Muhammad Umair | Portfolio</title>
-  <meta name="description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
+
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.png">
+
+  <!-- Preconnect to external domains for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Muhammad Umair | Portfolio">
-  <meta itemprop="description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
+  <meta itemprop="name" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta itemprop="description"
+    content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta itemprop="image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta itemprop="url" content="https://umair-dev.vercel.app">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://muhammadumair.dev">
+  <meta property="og:url" content="https://umair-dev.vercel.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Muhammad Umair | Portfolio">
-  <meta property="og:description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
+  <meta property="og:title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta property="og:description"
+    content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Muhammad Umair Portfolio">
+  <meta property="og:locale" content="en_US">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Muhammad Umair | Portfolio">
-  <meta name="twitter:description" content="Full Stack Engineer & React Native Engineer - Personal Portfolio Website">
+  <meta name="twitter:site" content="@sudo_umair">
+  <meta name="twitter:creator" content="@sudo_umair">
+  <meta name="twitter:title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta name="twitter:description"
+    content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta name="twitter:image:alt" content="Muhammad Umair Portfolio Preview">
+
+  <!-- LinkedIn Meta Tags -->
+  <meta property="og:image:secure_url"
+    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+
+  <!-- Additional Meta Tags -->
+  <meta name="application-name" content="Muhammad Umair Portfolio">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="msapplication-config" content="/browserconfig.xml">
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Muhammad Umair",
+    "jobTitle": "Full Stack Engineer & React Native Developer",
+    "url": "https://muhammadumair.dev",
+    "sameAs": [
+      "https://github.com/sudo-umair",
+      "https://linkedin.com/in/muhammad-umair"
+    ],
+    "image": "https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png",
+    "description": "Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions."
+  }
+  </script>
 </head>
 
 <body>
