--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
 
   <!-- Primary Meta Tags -->
-  <title>Muhammad Umair | Full Stack Engineer & React Native Developer</title>
-  <meta name="title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <title>Muhammad Umair | Full Stack & React Native Developer</title>
+  <meta name="title" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta name="description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta name="keywords"
@@ -34,7 +34,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta itemprop="name" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta itemprop="description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta itemprop="image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
@@ -43,7 +43,7 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://umair-dev.vercel.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta property="og:title" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta property="og:description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta property="og:image"
@@ -57,7 +57,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@sudo_umair">
   <meta name="twitter:creator" content="@sudo_umair">
-  <meta name="twitter:title" content="Muhammad Umair | Full Stack Engineer & React Native Developer">
+  <meta name="twitter:title" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta name="twitter:description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
   <meta name="twitter:image"
@@ -80,7 +80,7 @@
     "@type": "Person",
     "name": "Muhammad Umair",
     "jobTitle": "Full Stack Engineer & React Native Developer",
-    "url": "https://muhammadumair.dev",
+    "url": "https://umair-dev.vercel.app",
     "sameAs": [
       "https://github.com/sudo-umair",
       "https://linkedin.com/in/muhammad-umair"
