--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <meta itemprop="name" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta itemprop="description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
-  <meta itemprop="image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/preview.png">
   <meta itemprop="url" content="https://umair-dev.vercel.app">
 
   <!-- Facebook Meta Tags -->
@@ -46,8 +46,7 @@
   <meta property="og:title" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta property="og:description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="Muhammad Umair Portfolio">
@@ -60,13 +59,12 @@
   <meta name="twitter:title" content="Muhammad Umair | Full Stack & React Native Developer">
   <meta name="twitter:description"
     content="Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions. View my projects, skills, and experience.">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/preview.png">
   <meta name="twitter:image:alt" content="Muhammad Umair Portfolio Preview">
 
   <!-- LinkedIn Meta Tags -->
   <meta property="og:image:secure_url"
-    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png">
+    content="https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/preview.png">
 
   <!-- Additional Meta Tags -->
   <meta name="application-name" content="Muhammad Umair Portfolio">
@@ -85,7 +83,7 @@
       "https://github.com/sudo-umair",
       "https://linkedin.com/in/muhammad-umair"
     ],
-    "image": "https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/readme-img.png",
+    "image": "https://raw.githubusercontent.com/sudo-umair/portfolio-umair/master/preview.png",
     "description": "Full Stack Engineer & React Native Developer specializing in modern web applications, mobile development, and innovative software solutions."
   }
   </script>
